--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,5 @@
 {
     "require": {
-        "monolog/monolog": "1.0.*",
-        "vendor/package": "1.3.2",
-        "vendor/package2": "1.*",
-        "vendor/package3": "^2.0.3"
+        "phpmailer/phpmailer": "^6.0"
     }
 }
